# camblet

./: .gitignore  .golangci.yml  .goreleaser.yml  .licensei.toml  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  _config.yml  common.mk  config.yaml  debian-control  go.mod  go.sum  go.work  go.work.sum  index.md  install.sh  nasp-public.asc  nasp.service  repos.md
.github/: settings.yml
.github/config/: gh_projects.txt
.github/scripts/: create_repos.sh
.github/workflows/: go.yml  release.yml  repo-release.yml  site-deploy.yaml  site-deploy.yml  site-test.yml
api/: Makefile  buf.gen.yaml  buf.yaml  go.mod  go.sum
api/scripts/: download-deps.sh  install-buf.sh
api/types/: common.pb.go  common.proto
camblet.d/policies/: ci.yaml  sample.yaml
camblet.d/services/: ci.yaml
cmd/camblet/: build.go  main.go
cmd/nasp/: main.go
cmd/w3k/: go.mod  main.go
deploy/: camblet.service  debian-control  install.sh  nasp-public.asc  nasp.service
internal/cli/: cli.go  util.go
internal/config/: config.go  configuration.go
internal/policy/: convert.go  file_loader.go  policy.go  template.go
internal/service/: convert.go  file_loader.go  service.go
nasp.d/policies/: ci.yaml  sample.yaml
nasp.d/rules/: ci.yaml  sample.yaml
nasp.d/services/: ci.yaml  sample.yaml
pkg/config/: agent.go  (+2 more)
rules.d/: ci.yaml
samples/csr-rust/: Cargo.toml  Makefile
samples/csr-rust/.cargo/: config.toml
samples/csr-rust/src/: main.rs
sd.d/: ci.yaml
site/: .npmrc  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
(+182 files in other folders)
