[package]
name = "csr-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

x509-cert = { version = "0.2.3", features = ["builder"] }
rsa = {version = "0.9.2", features = ["sha2"]}

[[bin]]
name = "csr-rust"

[profile.release]
lto = 'thin'
opt-level = "s"
debug = false